# ridecomposer

./: .gitignore  README.md  compose.py  pyproject.toml
reference/: compose.py
src/ridecomposer/: __init__.py  audio.py  cli.py  config.py  dsp.py  poster.py  ride.py  util.py  web.py
src/ridecomposer/_rides/: 18803276852.json  18879712215.json
src/ridecomposer/_web/: template.html
streams/: 18691363606.json  18707856139.json  18743313232.json  18757715424.json  18789070353.json  18829477027.json  18855755758.json  18898068377.json
tests/: test_smoke.py
